v16.2/interfaces/GC.Spread.Sheets.Charts.ISeries.md
# Interface: ISeries

[Sheets](../modules/GC.Spread.Sheets.md).[Charts](../modules/GC.Spread.Sheets.Charts.md).ISeries

## Table of contents

### Properties

- [axisGroup](GC.Spread.Sheets.Charts.ISeries.md#axisgroup)
- [backColor](GC.Spread.Sheets.Charts.ISeries.md#backcolor)
- [backColorTransparency](GC.Spread.Sheets.Charts.ISeries.md#backcolortransparency)
- [border](GC.Spread.Sheets.Charts.ISeries.md#border)
- [bubbleSizes](GC.Spread.Sheets.Charts.ISeries.md#bubblesizes)
- [chartType](GC.Spread.Sheets.Charts.ISeries.md#charttype)
- [dataLabels](GC.Spread.Sheets.Charts.ISeries.md#datalabels)
- [dataPoints](GC.Spread.Sheets.Charts.ISeries.md#datapoints)
- [doughnutHoleSize](GC.Spread.Sheets.Charts.ISeries.md#doughnutholesize)
- [errorBars](GC.Spread.Sheets.Charts.ISeries.md#errorbars)
- [gapWidth](GC.Spread.Sheets.Charts.ISeries.md#gapwidth)
- [invertColor](GC.Spread.Sheets.Charts.ISeries.md#invertcolor)
- [invertIfNegative](GC.Spread.Sheets.Charts.ISeries.md#invertifnegative)
- [name](GC.Spread.Sheets.Charts.ISeries.md#name)
- [overlap](GC.Spread.Sheets.Charts.ISeries.md#overlap)
- [plotVisibleOnly](GC.Spread.Sheets.Charts.ISeries.md#plotvisibleonly)
- [startAngle](GC.Spread.Sheets.Charts.ISeries.md#startangle)
- [symbol](GC.Spread.Sheets.Charts.ISeries.md#symbol)
- [trendlines](GC.Spread.Sheets.Charts.ISeries.md#trendlines)
- [xValues](GC.Spread.Sheets.Charts.ISeries.md#xvalues)
- [yValues](GC.Spread.Sheets.Charts.ISeries.md#yvalues)

## Properties

### <a id="axisgroup" name="axisgroup"></a> axisGroup

• `Optional` **axisGroup**: [`AxisGroup`](../enums/GC.Spread.Sheets.Charts.AxisGroup.md)

___

### <a id="backcolor" name="backcolor"></a> backColor

• `Optional` **backColor**: `string` \| [`IPatternFillBackColor`](GC.Spread.Sheets.Charts.IPatternFillBackColor.md)

___

### <a id="backcolortransparency" name="backcolortransparency"></a> backColorTransparency

• `Optional` **backColorTransparency**: `number`

___

### <a id="border" name="border"></a> border

• `Optional` **border**: [`ISeriesItemBorder`](GC.Spread.Sheets.Charts.ISeriesItemBorder.md)

___

### <a id="bubblesizes" name="bubblesizes"></a> bubbleSizes

• `Optional` **bubbleSizes**: `string`

___

### <a id="charttype" name="charttype"></a> chartType

• `Optional` **chartType**: [`ChartType`](../enums/GC.Spread.Sheets.Charts.ChartType.md)

___

### <a id="datalabels" name="datalabels"></a> dataLabels

• `Optional` **dataLabels**: [`IDataLabels`](GC.Spread.Sheets.Charts.IDataLabels.md)

___

### <a id="datapoints" name="datapoints"></a> dataPoints

• `Optional` **dataPoints**: `Object`

#### Index signature

▪ [key: `number`]: [`IDataPoint`](GC.Spread.Sheets.Charts.IDataPoint.md)

___

### <a id="doughnutholesize" name="doughnutholesize"></a> doughnutHoleSize

• `Optional` **doughnutHoleSize**: `number`

___

### <a id="errorbars" name="errorbars"></a> errorBars

• `Optional` **errorBars**: [`ErrorBarItems`](GC.Spread.Sheets.Charts.ErrorBarItems.md)

___

### <a id="gapwidth" name="gapwidth"></a> gapWidth

• `Optional` **gapWidth**: `number`

___

### <a id="invertcolor" name="invertcolor"></a> invertColor

• `Optional` **invertColor**: `string`

___

### <a id="invertifnegative" name="invertifnegative"></a> invertIfNegative

• `Optional` **invertIfNegative**: `boolean`

___

### <a id="name" name="name"></a> name

• `Optional` **name**: `string`

___

### <a id="overlap" name="overlap"></a> overlap

• `Optional` **overlap**: `number`

___

### <a id="plotvisibleonly" name="plotvisibleonly"></a> plotVisibleOnly

• `Optional` **plotVisibleOnly**: `boolean`

___

### <a id="startangle" name="startangle"></a> startAngle

• `Optional` **startAngle**: `number`

___

### <a id="symbol" name="symbol"></a> symbol

• `Optional` **symbol**: [`ISymbol`](GC.Spread.Sheets.Charts.ISymbol.md)

___

### <a id="trendlines" name="trendlines"></a> trendlines

• `Optional` **trendlines**: [`TrendlineItem`](GC.Spread.Sheets.Charts.TrendlineItem.md)[]

___

### <a id="xvalues" name="xvalues"></a> xValues

• `Optional` **xValues**: `string`

___

### <a id="yvalues" name="yvalues"></a> yValues

• `Optional` **yValues**: `string`
