v17.0/interfaces/GC.Spread.Sheets.Charts.ISeries.md
# Interface: ISeries

[Sheets](../modules/GC.Spread.Sheets.md).[Charts](../modules/GC.Spread.Sheets.Charts.md).ISeries

## Hierarchy

- [`ISeriesItemBase`](GC.Spread.Sheets.Charts.ISeriesItemBase.md)

  ↳ **`ISeries`**

## Table of contents

### Properties

- [axisGroup](GC.Spread.Sheets.Charts.ISeries.md#axisgroup)
- [backColor](GC.Spread.Sheets.Charts.ISeries.md#backcolor)
- [backColorTransparency](GC.Spread.Sheets.Charts.ISeries.md#backcolortransparency)
- [border](GC.Spread.Sheets.Charts.ISeries.md#border)
- [bubbleSizes](GC.Spread.Sheets.Charts.ISeries.md#bubblesizes)
- [chartType](GC.Spread.Sheets.Charts.ISeries.md#charttype)
- [dataLabels](GC.Spread.Sheets.Charts.ISeries.md#datalabels)
- [dataPoints](GC.Spread.Sheets.Charts.ISeries.md#datapoints)
- [doughnutHoleSize](GC.Spread.Sheets.Charts.ISeries.md#doughnutholesize)
- [errorBars](GC.Spread.Sheets.Charts.ISeries.md#errorbars)
- [gapWidth](GC.Spread.Sheets.Charts.ISeries.md#gapwidth)
- [invertColor](GC.Spread.Sheets.Charts.ISeries.md#invertcolor)
- [invertIfNegative](GC.Spread.Sheets.Charts.ISeries.md#invertifnegative)
- [name](GC.Spread.Sheets.Charts.ISeries.md#name)
- [overlap](GC.Spread.Sheets.Charts.ISeries.md#overlap)
- [plotVisibleOnly](GC.Spread.Sheets.Charts.ISeries.md#plotvisibleonly)
- [showConnectorLines](GC.Spread.Sheets.Charts.ISeries.md#showconnectorlines)
- [smooth](GC.Spread.Sheets.Charts.ISeries.md#smooth)
- [startAngle](GC.Spread.Sheets.Charts.ISeries.md#startangle)
- [subtotals](GC.Spread.Sheets.Charts.ISeries.md#subtotals)
- [symbol](GC.Spread.Sheets.Charts.ISeries.md#symbol)
- [trendlines](GC.Spread.Sheets.Charts.ISeries.md#trendlines)
- [xValues](GC.Spread.Sheets.Charts.ISeries.md#xvalues)
- [yValues](GC.Spread.Sheets.Charts.ISeries.md#yvalues)

## Properties

### <a id="axisgroup" name="axisgroup"></a> axisGroup

• `Optional` **axisGroup**: [`AxisGroup`](../enums/GC.Spread.Sheets.Charts.AxisGroup.md)

___

### <a id="backcolor" name="backcolor"></a> backColor

• `Optional` **backColor**: `string` \| [`IPatternFillBackColor`](GC.Spread.Sheets.Charts.IPatternFillBackColor.md)

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[backColor](GC.Spread.Sheets.Charts.ISeriesItemBase.md#backcolor)

___

### <a id="backcolortransparency" name="backcolortransparency"></a> backColorTransparency

• `Optional` **backColorTransparency**: `number`

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[backColorTransparency](GC.Spread.Sheets.Charts.ISeriesItemBase.md#backcolortransparency)

___

### <a id="border" name="border"></a> border

• `Optional` **border**: [`ISeriesItemBorder`](GC.Spread.Sheets.Charts.ISeriesItemBorder.md)

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[border](GC.Spread.Sheets.Charts.ISeriesItemBase.md#border)

___

### <a id="bubblesizes" name="bubblesizes"></a> bubbleSizes

• `Optional` **bubbleSizes**: `string`

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[bubbleSizes](GC.Spread.Sheets.Charts.ISeriesItemBase.md#bubblesizes)

___

### <a id="charttype" name="charttype"></a> chartType

• `Optional` **chartType**: [`ChartType`](../enums/GC.Spread.Sheets.Charts.ChartType.md)

___

### <a id="datalabels" name="datalabels"></a> dataLabels

• `Optional` **dataLabels**: [`IDataLabels`](GC.Spread.Sheets.Charts.IDataLabels.md)

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[dataLabels](GC.Spread.Sheets.Charts.ISeriesItemBase.md#datalabels)

___

### <a id="datapoints" name="datapoints"></a> dataPoints

• `Optional` **dataPoints**: `Object`

#### Index signature

▪ [key: `number`]: [`IDataPoint`](GC.Spread.Sheets.Charts.IDataPoint.md)

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[dataPoints](GC.Spread.Sheets.Charts.ISeriesItemBase.md#datapoints)

___

### <a id="doughnutholesize" name="doughnutholesize"></a> doughnutHoleSize

• `Optional` **doughnutHoleSize**: `number`

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[doughnutHoleSize](GC.Spread.Sheets.Charts.ISeriesItemBase.md#doughnutholesize)

___

### <a id="errorbars" name="errorbars"></a> errorBars

• `Optional` **errorBars**: [`ErrorBarItems`](GC.Spread.Sheets.Charts.ErrorBarItems.md)

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[errorBars](GC.Spread.Sheets.Charts.ISeriesItemBase.md#errorbars)

___

### <a id="gapwidth" name="gapwidth"></a> gapWidth

• `Optional` **gapWidth**: `number`

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[gapWidth](GC.Spread.Sheets.Charts.ISeriesItemBase.md#gapwidth)

___

### <a id="invertcolor" name="invertcolor"></a> invertColor

• `Optional` **invertColor**: `string`

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[invertColor](GC.Spread.Sheets.Charts.ISeriesItemBase.md#invertcolor)

___

### <a id="invertifnegative" name="invertifnegative"></a> invertIfNegative

• `Optional` **invertIfNegative**: `boolean`

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[invertIfNegative](GC.Spread.Sheets.Charts.ISeriesItemBase.md#invertifnegative)

___

### <a id="name" name="name"></a> name

• `Optional` **name**: `string`

___

### <a id="overlap" name="overlap"></a> overlap

• `Optional` **overlap**: `number`

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[overlap](GC.Spread.Sheets.Charts.ISeriesItemBase.md#overlap)

___

### <a id="plotvisibleonly" name="plotvisibleonly"></a> plotVisibleOnly

• `Optional` **plotVisibleOnly**: `boolean`

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[plotVisibleOnly](GC.Spread.Sheets.Charts.ISeriesItemBase.md#plotvisibleonly)

___

### <a id="showconnectorlines" name="showconnectorlines"></a> showConnectorLines

• `Optional` **showConnectorLines**: `boolean`

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[showConnectorLines](GC.Spread.Sheets.Charts.ISeriesItemBase.md#showconnectorlines)

___

### <a id="smooth" name="smooth"></a> smooth

• `Optional` **smooth**: `boolean`

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[smooth](GC.Spread.Sheets.Charts.ISeriesItemBase.md#smooth)

___

### <a id="startangle" name="startangle"></a> startAngle

• `Optional` **startAngle**: `number`

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[startAngle](GC.Spread.Sheets.Charts.ISeriesItemBase.md#startangle)

___

### <a id="subtotals" name="subtotals"></a> subtotals

• `Optional` **subtotals**: `number`[]

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[subtotals](GC.Spread.Sheets.Charts.ISeriesItemBase.md#subtotals)

___

### <a id="symbol" name="symbol"></a> symbol

• `Optional` **symbol**: [`ISymbol`](GC.Spread.Sheets.Charts.ISymbol.md)

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[symbol](GC.Spread.Sheets.Charts.ISeriesItemBase.md#symbol)

___

### <a id="trendlines" name="trendlines"></a> trendlines

• `Optional` **trendlines**: [`TrendlineItem`](GC.Spread.Sheets.Charts.TrendlineItem.md)[]

#### Inherited from

[ISeriesItemBase](GC.Spread.Sheets.Charts.ISeriesItemBase.md).[trendlines](GC.Spread.Sheets.Charts.ISeriesItemBase.md#trendlines)

___

### <a id="xvalues" name="xvalues"></a> xValues

• `Optional` **xValues**: `string`

___

### <a id="yvalues" name="yvalues"></a> yValues

• `Optional` **yValues**: `string`
